# Atlas-Local

./: .atlasignore.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
benches/: scan_benchmark.rs
crates/atlas-analysis/: Cargo.toml
crates/atlas-analysis/benches/: l2_benchmark.rs  l3_benchmark.rs  metrics_benchmark.rs
crates/atlas-analysis/src/: call_graph_builder.rs  duplication.rs  finding.rs  import_resolver.rs  inline_suppression.rs  l1_pattern.rs  l2_builder.rs  l2_engine.rs  l2_intraprocedural.rs  l2_taint_config.rs  l3_engine.rs  l3_interprocedural.rs  l3_lang_config.rs  lib.rs  metrics.rs  secrets.rs
crates/atlas-analysis/tests/: fingerprint_stability.rs
crates/atlas-audit/: Cargo.toml
crates/atlas-audit/src/: bundle.rs  lib.rs
crates/atlas-cache/: Cargo.toml
crates/atlas-cache/src/: cache.rs  lib.rs
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: lib.rs  main.rs
crates/atlas-cli/src/commands/: audit.rs  baseline.rs  compliance.rs  config.rs  diag.rs  license.rs  mod.rs  rulepack.rs  sbom.rs  sca.rs  scan.rs
crates/atlas-cli/tests/: e2e_compliance.rs  e2e_scan.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/benches/: scan_benchmark.rs
crates/atlas-core/src/: compliance.rs  config.rs  diff.rs  engine.rs  lib.rs  scanner.rs
crates/atlas-core/tests/: offline_operation.rs  quickstart_validation.rs
crates/atlas-lang/: Cargo.toml
crates/atlas-lang/src/: adapter.rs  csharp.rs  error.rs  go.rs  java.rs  kotlin.rs  language.rs  lib.rs  php.rs  python.rs  ruby.rs  typescript.rs
crates/atlas-license/: Cargo.toml
crates/atlas-license/src/: floating.rs  lib.rs  node_locked.rs  validator.rs
crates/atlas-policy/: Cargo.toml
crates/atlas-policy/src/: baseline.rs  gate.rs  lib.rs  policy.rs
crates/atlas-report/: Cargo.toml
crates/atlas-report/src/: json.rs  jsonl.rs  lib.rs  masking.rs  sarif.rs
crates/atlas-rules/: Cargo.toml
crates/atlas-rules/src/: compiled.rs  declarative.rs  lib.rs  rulepack.rs  scripted.rs
crates/atlas-sca/: Cargo.toml
crates/atlas-sca/src/: cyclonedx.rs  database.rs  lib.rs  matcher.rs  purl.rs  sbom.rs  spdx.rs  update.rs
crates/atlas-sca/src/lockfile/: cargo.rs  go.rs  maven.rs  mod.rs  npm.rs  nuget.rs  python.rs
openspec/changes/code-quality-metrics/: proposal.md  tasks.md
openspec/changes/compliance-framework-mapping/: design.md
openspec/changes/diff-aware-scanning/: proposal.md  tasks.md
openspec/changes/l3-taint-tracking/: tasks.md
openspec/changes/sbom-generation/: design.md  proposal.md  tasks.md
openspec/specs/kotlin-language-support/: spec.md
openspec/specs/l3-taint-tracking/: spec.md
openspec/specs/quality-rules/: spec.md
openspec/specs/ruby-language-support/: spec.md
openspec/specs/sbom-generation/: spec.md
rules/builtin/csharp/: command-injection.yaml  console-writeline.yaml  csrf-disabled.yaml  empty-catch-block.yaml  empty-conditional.yaml  empty-finally-block.yaml  empty-method-body.yaml  excessive-parameters.yaml  goto-usage.yaml  insecure-deserialization.yaml  insecure-random.yaml  insecure-tls.yaml  jwt-no-verify.yaml  ldap-injection.yaml  log-injection.yaml  nested-ternary.yaml  object-type-usage.yaml  open-redirect.yaml  path-traversal.yaml  redundant-boolean.yaml  regex-dos.yaml  sql-injection-concatenation.yaml  sql-injection-interpolation.yaml  string-concat-in-loop.yaml  todo-comment.yaml  unrestricted-file-upload.yaml  viewstate-insecure.yaml  weak-crypto.yaml  xxe.yaml
rules/builtin/go/: command-injection.yaml  defer-in-loop.yaml  empty-conditional.yaml  empty-error-check.yaml  empty-function-body.yaml  excessive-parameters.yaml  file-permission-too-broad.yaml  fmt-println.yaml  hardcoded-secret.yaml  hardcoded-tls-key.yaml  insecure-cookie.yaml  insecure-random.yaml  jwt-no-verify.yaml  log-injection.yaml  open-redirect.yaml  panic-usage.yaml  path-traversal.yaml  race-condition-map.yaml  redundant-boolean.yaml  sql-injection.yaml  ssrf.yaml  string-concat-in-loop.yaml  template-injection.yaml  tls-insecure-skip-verify.yaml  todo-comment.yaml  type-assertion-without-check.yaml  unchecked-error.yaml  unsafe-reflect.yaml  weak-crypto.yaml
rules/builtin/java/: boolean-method-naming.yaml  empty-catch-block.yaml  empty-conditional.yaml  empty-method-body.yaml  excessive-parameters.yaml  expression-language-injection.yaml  hardcoded-secret.yaml  insecure-deserialization.yaml  insecure-object-reference.yaml  insecure-random.yaml  insecure-tls.yaml  jndi-injection.yaml  jwt-no-verify.yaml  ldap-injection.yaml  log-injection.yaml  magic-number.yaml  missing-default-case.yaml  nested-ternary.yaml  open-redirect.yaml  path-traversal.yaml  raw-type-usage.yaml  redundant-boolean.yaml  spring-csrf-disabled.yaml  sql-injection.yaml  ssrf.yaml  string-concat-in-loop.yaml  system-exit.yaml  system-out-println.yaml  thread-sleep-in-loop.yaml  todo-comment.yaml  unrestricted-file-upload.yaml  weak-crypto.yaml  xpath-injection.yaml  xss-servlet.yaml  xxe.yaml
rules/builtin/kotlin/: command-injection.yaml  coroutine-unsafe-context.yaml  (+28 more)
rules/compliance/: hipaa-security.yaml  nist-800-53.yaml  owasp-top-10-2021.yaml  pci-dss-4.0.yaml
specs/001-atlas-local-sast/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-code-quality-analysis/: data-model.md  research.md  spec.md
specs/003-compliance-framework-mapping/: data-model.md  spec.md
specs/004-diff-aware-scanning/: data-model.md  spec.md
specs/005-l2-data-flow-analysis/: data-model.md  spec.md
specs/006-rule-library-expansion/: data-model.md  spec.md
specs/007-code-quality-metrics/: data-model.md  spec.md
specs/008-sca-dependency-scanning/: data-model.md  spec.md
specs/009-sbom-generation/: data-model.md  spec.md
specs/010-web-dashboard/: data-model.md  spec.md
specs/011-l3-taint-tracking/: data-model.md  spec.md
specs/012-iac-scanning/: data-model.md  spec.md
tests/integration/: determinism.rs  fingerprint_stability.rs  offline_operation.rs  quickstart_validation.rs
tools/: build-rulepack.sh
(+852 files in other folders)
