[workspace]
resolver = "3"
members = [
  "crates/atlas-cli",
  "crates/atlas-core",
  "crates/atlas-lang",
  "crates/atlas-rules",
  "crates/atlas-analysis",
  "crates/atlas-policy",
  "crates/atlas-report",
  "crates/atlas-license",
  "crates/atlas-audit",
  "crates/atlas-cache",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "LicenseRef-Proprietary"

[workspace.dependencies]
# AST parsing
tree-sitter = "0.26"

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Parallelism
rayon = "1.11"

# Scripting rules engine
rhai = "1.24"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Progress bars and CLI reporting
indicatif = "0.18"

# Cryptographic signing for rulepacks
ed25519-dalek = { version = "2.2", features = ["rand_core"] }

# Cache storage
rusqlite = { version = "0.38", features = ["bundled"] }

# Binary serialization for cache
bincode = "2.0"

# Serialization framework
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Filesystem traversal
walkdir = "2.5"
ignore = "0.4"
globset = "0.4"

# Unique identifiers
uuid = { version = "1.20", features = ["v4", "v5"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Archive and compression for rulepacks
tar = "0.4"
flate2 = "1.1"

# Encoding
base64 = "0.22"
hex = "0.4"

# Benchmarking (dev only)
criterion = "0.8"

# Home directory resolution
dirs-next = "2.0"

# Testing utilities
tempfile = "3"
