[package]
name = "atlas-audit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Audit bundle generation and verification for Atlas Local SAST"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
