[package]
name = "atlas-cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Result caching with SQLite for Atlas Local SAST"

[dependencies]
rusqlite = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
