[package]
name = "atlas-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line interface for Atlas Local SAST"

[[bin]]
name = "atlas"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }

atlas-core = { path = "../atlas-core" }
atlas-rules = { path = "../atlas-rules" }
atlas-analysis = { path = "../atlas-analysis" }
atlas-policy = { path = "../atlas-policy" }
atlas-report = { path = "../atlas-report" }
atlas-license = { path = "../atlas-license" }
atlas-audit = { path = "../atlas-audit" }
atlas-cache = { path = "../atlas-cache" }
atlas-lang = { path = "../atlas-lang" }
