[package]
name = "atlas-license"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "License validation and management for Atlas Local SAST"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

atlas-core = { path = "../atlas-core" }
