[package]
name = "atlas-report"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Output formatters and report generation for Atlas Local SAST"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
