[package]
name = "atlas-rules"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Rule system and rulepack management for Atlas Local SAST"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rhai = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
base64 = { workspace = true }

walkdir = { workspace = true }

atlas-lang = { path = "../atlas-lang" }

[dev-dependencies]
tempfile = { workspace = true }
